# social_experiments

during_lab_exp/: nav2pose_and_record_algos.py
during_lab_exp/nav2_social_experiments/: CMakeLists.txt  package.xml
during_lab_exp/nav2_social_experiments/behavior_trees/: navigate_through_poses.xml  navigate_to_pose.xml  navigate_to_pose_replan.xml
during_lab_exp/nav2_social_experiments/config/nav_params/: DWA_params.yaml  DWA_social_costmap_params.yaml  DWA_with_global_social_params.yaml  MPPI_params.yaml  MPPI_social_costmap_params.yaml  SFM_params.yaml  goals_and_poses.yaml  social_MPPI_params.yaml
during_lab_exp/nav2_social_experiments/launch/: bringup_algos.launch.py  navigation.launch.py
during_lab_exp/nav2_social_experiments/maps/: covivio_v1.pgm  covivio_v1.yaml  test_v1_v2.pgm  test_v1_v2.yaml  test_v3_v4.pgm  test_v3_v4.yaml  test_v5.pgm  test_v5.yaml  test_v6.pgm  test_v6.yaml  test_v7_v8.pgm  test_v7_v8.yaml
during_lab_exp/nav2_social_experiments/nav2_social_experiments/tasks/DumbNav/: applr_environment_social_controller.py  applr_social_controller.py
during_lab_exp/nav2_social_experiments/nav2_social_experiments/utils/: sfm.py
mppi_social_critics_update/: CMakeLists.txt  package.xml  social_critics.xml
mppi_social_critics_update/include/mppi_social_critics/: social_critic.hpp
mppi_social_critics_update/src/: social_critic.cpp
